added sorting functionality
