# server/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
     This is the inventory microservice.
   contact:
     email: terry.chan@hohokusinc.com
-  version: 1.0.0
+  version: 1.0.1
 servers:
 - url: /
 tags:
@@ -18,6 +18,15 @@ paths:
       - inventory
       summary: Get the information of all inventory
       operationId: get_inv
+      parameters:
+      - name: sorting
+        in: query
+        description: This is the sorting
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
       responses:
         "200":
           description: Ok
@@ -72,6 +81,14 @@ paths:
         explode: true
         schema:
           type: string
+      - name: sorting
+        in: query
+        description: This is the sorting
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
       responses:
         "200":
           description: Ok
@@ -96,6 +113,14 @@ paths:
         in: query
         description: This is the input for getting lot number
         required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: sorting
+        in: query
+        description: This is the sorting
+        required: false
         style: form
         explode: true
         schema:
